<?xml version="1.0"?>
<package>
  <name>ros_aruco</name>
  <version>0.1.0</version>
  <description>ROS node that publishes ArUco marker poses.</description>

  <maintainer email="dhrdekok@gmail.com">Patrick de Kok</maintainer>

  <license>BSD</license>
  <url type="bugtracker">http://github.com/pkok/ros_aruco/issues</url>
  <url type="repository">http://github.com/pkok/ros_aruco</url>
  <author email="dhrdekok@gmail.com">Patrick de Kok</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <!--
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  -->

  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <!--
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  -->

  <export>
    <!-- <metapackage/> -->
  </export>
</package>
